src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

#info-tooltip.react-tooltip__place-top {
  margin-top: -0.5rem !important;
}

#info-tooltip.react-tooltip__place-bottom {
  margin-top: 0.5rem !important;
}

@layer base {
  body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial,
      sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
  }
}

@layer components {
  .i-container {
    @apply w-full max-w-[1660px] px-4 md:px-6 mx-auto;
  }

  .i-modal {
    @apply !w-full !h-[calc(100%_-_32px)] md:!h-[calc(100%_-_48px)];
  }
}

